# ai-fragility

./: .gitignore  Justfile  README.md  pyproject.toml
artifacts/: runs.duckdb
configs/: config.yaml
src/ai_fragility/: __init__.py  api.py  attacks.py  cli.py  defenses.py  metrics.py  models.py  pipeline.py  seed.py  tracking.py  viz.py
tests/: test_attacks_and_defenses.py
